# openrtist

./: .classpath  .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CREDITS.md  Dockerfile  Makefile  OpenVINO.md  PRIVACY_POLICY.md  README.md  docker-compose.yml  pyproject.toml  setup.cfg  train_style.py
android-client/: build.gradle  settings.gradle
clkernels/: mvn_custom_layer.xml  mvn_layer.cl  mvn_scale_layer.cl
gabriel-client-openrtist-android/: .gitignore  build.gradle  settings.gradle
gabriel-client-openrtist-python/: README  README.md  adapter.py  capture_adapter.py  capture_client.py  client.py  config.py  design.py  ocv_client.py  playback_client.py  playback_stream.py  protocol.py  requirements.txt  run_pipe_stream_for_screensaver.sh  screensaver.py  socketLib.py  stream_for_screensaver.sh  ui.py  video_engine.py
gabriel-client-style-python/: client.py  run_pipe_stream_for_screensaver.sh  ui.py
model-app/: app.py  config.py  make_celery.py  openvino_convert.py  requirements.txt  train_style.py
models/: 16.xml  16v2.xml  32.xml  32v2.xml  candy.txt  dido_carthage.txt  fall_icarus.txt  going_to_work.txt  monet.txt  the_scream.txt  weeping_woman.txt
models_1p0/: cafe_gogh.txt  sunday_afternoon.txt
openrtist_sinfonia/: LICENSE  README.md  capture_adapter.py  pyproject.toml  screensaver.py  stream_for_screensaver.sh
openrtist_sinfonia/screensaver/: dotxscreensaver
openrtist_sinfonia/style-image/: candy.txt  fall_icarus.txt  going_to_work.txt  monet.txt  mosaic.txt  rain_princess.txt  starry-night.txt  sunday_afternoon.txt
(+319 files in other folders)
