[tool.poetry]
name = "openrtist-sinfonia"
version = "0.1.0"
description = "Openrtist Python Client with Sinfonia to control selection and connection with backends."
authors = ["Carnegie Mellon University <satya+group@cs.cmu.edu>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "openrtist_sinfonia"}]

[tool.poetry.dependencies]
python = "^3.8"
gabriel-client = "2.1.1"
pyqt5 = "5.14.2"
protobuf = "<=3.18.1"
sinfonia-tier3 = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
